--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: iris-api-deployment
+  name: iris-api
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: iris-api
@@ -13,7 +13,19 @@ spec:
         app: iris-api
     spec:
       containers:
-      - name: iris-api
-        image: us-central1-docker.pkg.dev/PROJECT_ID/iris-api-repo/iris-api:latest
-        ports:
-        - containerPort: 5000
+        - name: iris-api
+          image: us-central1-docker.pkg.dev/mlops-474118/iris-api-repo/iris-api:latest
+          ports:
+            - containerPort: 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: iris-api-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: iris-api
+  ports:
+    - port: 80
+      targetPort: 5000
