--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,48 @@
-name: CI/CD Pipeline for IRIS API
+name: CI/CD - Build and Deploy IRIS API to GKE
 
 on:
   push:
-    branches:
-      - main
-
-env:
-  IMAGE_NAME: iris-api
-  GAR_LOCATION: ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/iris-api-repo/iris-api
+    branches: [ "main" ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+    - name: Checkout Repository
+      uses: actions/checkout@v3
 
-      - name: Set up gcloud CLI
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
+    - name: Set up Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@v2
+      with:
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        export_default_credentials: true
 
-      - name: Configure Docker to use Artifact Registry
-        run: gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
+    - name: Configure Docker for Artifact Registry
+      run: |
+        gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
 
-      - name: Build Docker Image
-        run: |
-          docker build -t $GAR_LOCATION:${{ github.sha }} .
+    - name: Build and Push Docker Image
+      env:
+        IMAGE_NAME: iris-api
+      run: |
+        docker build -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/iris-api-repo/$IMAGE_NAME:${{ github.sha }} .
+        docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/iris-api-repo/$IMAGE_NAME:${{ github.sha }}
 
-      - name: Push Docker Image to Artifact Registry
-        run: |
-          docker push $GAR_LOCATION:${{ github.sha }}
+    - name: Get GKE Credentials
+      run: |
+        gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Get GKE Credentials
-        run: |
-          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GKE_ZONE }}
+    - name: Install GKE Auth Plugin
+      run: |
+        sudo apt-get update
+        sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin -y
+        export USE_GKE_GCLOUD_AUTH_PLUGIN=True
 
-      - name: Deploy to GKE
-        run: |
-          kubectl set image deployment/iris-api iris-api=$GAR_LOCATION:${{ github.sha }}
+    - name: Deploy to GKE
+      env:
+        IMAGE_NAME: iris-api
+      run: |
+        kubectl set image deployment/iris-api iris-api=${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/iris-api-repo/$IMAGE_NAME:${{ github.sha }}
+        kubectl rollout status deployment/iris-api
