--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,75 @@
-name: CI/CD - Build and Deploy IRIS API to GKE
+name: CI/CD Pipeline for IRIS API
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main   # Trigger deploys only when code is pushed to main
+
+env:
+  IMAGE_NAME: iris-api
+  GAR_LOCATION: ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/iris-api-repo/iris-api
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      # -------------------------
+      # Step 1: Checkout Code
+      # -------------------------
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Authenticate to Google Cloud
-      uses: google-github-actions/auth@v2
-      with:
-        credentials_json: ${{ secrets.GCP_SA_KEY }}
+      # -------------------------
+      # Step 2: Authenticate to GCP
+      # -------------------------
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-    - name: Set up gcloud CLI
-      uses: google-github-actions/setup-gcloud@v2
-      with:
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
+      # -------------------------
+      # Step 3: Set up gcloud CLI
+      # -------------------------
+      - name: Set up gcloud CLI
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-    - name: Configure Docker for Artifact Registry
-      run: |
-        gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
+      # -------------------------
+      # Step 4: Configure Docker for Artifact Registry
+      # -------------------------
+      - name: Configure Docker for Artifact Registry
+        run: gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
 
-    - name: Build and Push Docker Image
-      env:
-        IMAGE_NAME: iris-api
-      run: |
-        docker build -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/iris-api-repo/$IMAGE_NAME:${{ github.sha }} .
-        docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/iris-api-repo/$IMAGE_NAME:${{ github.sha }}
+      # -------------------------
+      # Step 5: Build Docker image
+      # -------------------------
+      - name: Build Docker Image
+        run: |
+          docker build -t $GAR_LOCATION:${{ github.sha }} .
 
-    - name: Get GKE Credentials
-      run: |
-        gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
+      # -------------------------
+      # Step 6: Push Docker image to Artifact Registry
+      # -------------------------
+      - name: Push Docker Image
+        run: |
+          docker push $GAR_LOCATION:${{ github.sha }}
 
-    - name: Install GKE Auth Plugin
-      run: |
-        sudo apt-get update
-        sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin -y
-        export USE_GKE_GCLOUD_AUTH_PLUGIN=True
+      # -------------------------
+      # Step 7: Connect to GKE cluster
+      # -------------------------
+      - name: Get GKE credentials
+        run: |
+          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} \
+            --zone ${{ secrets.GKE_ZONE }} \
+            --project ${{ secrets.GCP_PROJECT_ID }}
 
-    - name: Deploy to GKE
-      env:
-        IMAGE_NAME: iris-api
-      run: |
-        kubectl set image deployment/iris-api iris-api=${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/iris-api-repo/$IMAGE_NAME:${{ github.sha }}
-        kubectl rollout status deployment/iris-api
+      # -------------------------
+      # Step 8: Deploy to Kubernetes
+      # -------------------------
+      - name: Deploy to GKE
+        run: |
+          kubectl set image deployment/iris-api iris-api=$GAR_LOCATION:${{ github.sha }} \
+            --namespace=default
+          kubectl rollout status deployment/iris-api --namespace=default
