--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline for IRIS
+name: CI/CD Pipeline for IRIS (debug)
 
 on:
   push:
@@ -14,73 +14,64 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: 🧾 Print Context Info
+        run: |
+          echo "✅ Workflow triggered on branch: ${{ github.ref }}"
+          echo "Repo: ${{ github.repository }}"
+          echo "Commit: ${{ github.sha }}"
+          echo "Actor: ${{ github.actor }}"
+          echo "Working directory:"
+          pwd
+          echo "Files:"
+          ls -al
 
-      # Step 2: Authenticate to Google Cloud
-      - name: Authenticate to Google Cloud
+      - name: 🧩 Debug Secret Existence
+        run: |
+          echo "Checking for required secrets..."
+          if [ -z "${{ secrets.GCP_PROJECT_ID }}" ]; then echo "❌ Missing GCP_PROJECT_ID"; exit 1; fi
+          if [ -z "${{ secrets.GCP_SA_KEY }}" ]; then echo "❌ Missing GCP_SA_KEY"; exit 1; fi
+          if [ -z "${{ secrets.GCP_REGION }}" ]; then echo "❌ Missing GCP_REGION"; exit 1; fi
+          if [ -z "${{ secrets.GKE_CLUSTER }}" ]; then echo "❌ Missing GKE_CLUSTER"; exit 1; fi
+          if [ -z "${{ secrets.GKE_ZONE }}" ]; then echo "❌ Missing GKE_ZONE"; exit 1; fi
+          echo "✅ All required secrets appear to exist."
+
+      - name: 🔐 Authenticate to Google Cloud
         id: auth
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      # Step 3: Install and configure gcloud
-      - name: Setup gcloud CLI
+      - name: ☁️ Setup gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      # Step 4: Configure Docker to use Artifact Registry
-      - name: Configure Docker for Artifact Registry
+      - name: 🐳 Configure Docker for Artifact Registry
         run: |
-          echo "🧩 Configuring Docker authentication for region: ${{ secrets.GCP_REGION }}"
+          set -x
           gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
-          echo "✅ Docker configured successfully."
 
-      # Step 5: Build Docker Image
-      - name: Build Docker Image
+      - name: 🧱 Build Docker Image
         run: |
-          echo "🔨 Building Docker image..."
-          echo "Image tag: $GAR_LOCATION:${{ github.sha }}"
+          set -x
+          echo "Building Docker image..."
           docker build -t $GAR_LOCATION:${{ github.sha }} .
-          echo "✅ Docker image built successfully."
 
-      # Step 6: Push Docker Image
-      - name: Push Docker Image
+      - name: 🚀 Push Docker Image
         run: |
-          echo "🚀 Pushing image to Artifact Registry..."
-          echo "Image: $GAR_LOCATION:${{ github.sha }}"
+          set -x
           docker push $GAR_LOCATION:${{ github.sha }}
-          echo "✅ Image pushed successfully."
 
-      # Step 7: Get GKE credentials
-      - name: Get GKE credentials
+      - name: ☸️ Get GKE Credentials
         run: |
-          echo "🎯 Getting GKE credentials..."
-          echo "Cluster: ${{ secrets.GKE_CLUSTER }}, Zone: ${{ secrets.GKE_ZONE }}"
+          set -x
           gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} \
             --zone ${{ secrets.GKE_ZONE }} \
             --project ${{ secrets.GCP_PROJECT_ID }}
-          echo "✅ GKE credentials configured successfully."
-          kubectl config current-context
 
-      # Step 8: Verify Kubernetes connection
-      - name: Verify Kubernetes Context
+      - name: 🧩 Deploy to GKE
         run: |
-          echo "🔍 Verifying Kubernetes connection..."
-          kubectl get nodes || (echo "❌ Failed to connect to GKE cluster" && exit 1)
-          kubectl get ns
-          echo "✅ Kubernetes cluster reachable."
-
-      # Step 9: Deploy to GKE
-      - name: Deploy to GKE
-        run: |
-          echo "🚢 Deploying image to GKE..."
-          echo "Updating deployment: iris-api with image: $GAR_LOCATION:${{ github.sha }}"
-          kubectl set image deployment/iris-api iris-api=$GAR_LOCATION:${{ github.sha }} --namespace=default || (echo "❌ Failed to update image" && exit 1)
-          
-          echo "⏳ Waiting for rollout to complete..."
-          kubectl rollout status deployment/iris-api --namespace=default || (echo "❌ Rollout failed" && exit 1)
-
-          echo "✅ Deployment successful!"
+          set -x
+          echo "Deploying to GKE..."
+          kubectl set image deployment/iris-api iris-api=$GAR_LOCATION:${{ github.sha }} --namespace=default
+          kubectl rollout status deployment/iris-api --namespace=default
