--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   IMAGE_NAME: iris-api
-  GAR_LOCATION: ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/iris-api-repo/iris-api
+  GAR_LOCATION: us-central1-docker.pkg.dev/mlops-474118/iris-api-repo/iris-api
 
 jobs:
   deploy:
