minimal config for texting

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,94 +14,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Start
       - name: ✅ Workflow started
-        run: echo "🚀 CI/CD triggered on branch ${{ github.ref }}"
-
-      # Step 2: Checkout code
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      # Step 3: Authenticate to Google Cloud
-      - name: Authenticate to Google Cloud
-        id: auth
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-      # Step 4: Verify Authentication
-      - name: 🔍 Verify GCP Authentication
         run: |
-          echo "Checking gcloud authentication..."
-          gcloud auth list
-          echo "Current GCP project config:"
-          gcloud config list project
-
-      # 🧪 Step 5: Sanity Checks
-      - name: 🧪 Sanity Checks (Environment)
-        run: |
-          echo "==> Sanity Check: Printing environment variables"
-          echo "GitHub SHA: ${{ github.sha }}"
-          echo "GCP Project: ${{ secrets.GCP_PROJECT_ID }}"
-          echo "GCP Region: ${{ secrets.GCP_REGION }}"
-          echo "GKE Cluster: ${{ secrets.GKE_CLUSTER }}"
-          echo "Zone: ${{ secrets.GKE_ZONE }}"
-          echo "Docker Image will be: $GAR_LOCATION:${{ github.sha }}"
-          echo "✅ Sanity check passed if above values are non-empty."
-
-      # Step 6: Setup gcloud CLI
-      - name: Setup gcloud CLI
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-
-      # Step 7: Configure Docker
-      - name: Configure Docker
-        run: |
-          echo "🔧 Configuring Docker to use Artifact Registry..."
-          gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
-
-      # Step 8: Build Docker Image
-      - name: 🏗️ Build Docker Image
-        run: |
-          echo "🛠️ Building Docker image..."
-          docker build -t $GAR_LOCATION:${{ github.sha }} .
-
-      # Step 9: Push Docker Image
-      - name: 🚀 Push Docker Image
-        run: |
-          echo "📦 Pushing image to Artifact Registry..."
-          docker push $GAR_LOCATION:${{ github.sha }}
-
-      # Step 10: Connect to GKE
-      - name: 🔑 Get GKE Credentials
-        run: |
-          echo "🔗 Fetching GKE credentials..."
-          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} \
-            --zone ${{ secrets.GKE_ZONE }} \
-            --project ${{ secrets.GCP_PROJECT_ID }}
-
-      # Step 11: Sanity Check (Cluster)
-      - name: 🧪 Sanity Check (GKE Connectivity)
-        run: |
-          echo "🔍 Verifying connection to GKE..."
-          kubectl cluster-info
-          echo "Listing existing deployments..."
-          kubectl get deployments --namespace=default || echo "⚠️ No deployments found yet"
-          echo "✅ Cluster connection successful if above shows info."
-
-      # Step 12: Deploy to GKE
-      - name: 🌐 Deploy to GKE
-        run: |
-          echo "🚀 Updating deployment image..."
-          kubectl set image deployment/iris-api iris-api=$GAR_LOCATION:${{ github.sha }} --namespace=default
-          echo "🕒 Waiting for rollout to complete..."
-          kubectl rollout status deployment/iris-api --namespace=default
-
-      # Step 13: Post-deploy verification
-      - name: ✅ Verify Deployment
-        run: |
-          echo "🔍 Checking running pods and services..."
-          kubectl get pods --namespace=default
-          kubectl get svc --namespace=default
-          echo "🎉 Deployment successful!"
+          echo "🚀 CI/CD triggered on branch ${{ github.ref }}"
+          echo "🔧 Running on commit ${{ github.sha }}"
+          echo "🔹 Image name: $IMAGE_NAME"
+          echo "🔹 Artifact Registry path: $GAR_LOCATION"
