--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,16 +16,14 @@ jobs:
     steps:
       # Step 1: Start
       - name: ✅ Workflow started
-        run: |
-          echo "🚀 CI/CD triggered on branch ${{ github.ref }}"
-          echo "🔧 Commit SHA: ${{ github.sha }}"
+        run: echo "🚀 CI/CD triggered on branch ${{ github.ref }}"
 
       # Step 2: Checkout code
-      - name: 📂 Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       # Step 3: Authenticate to Google Cloud
-      - name: 🔐 Authenticate to Google Cloud
+      - name: Authenticate to Google Cloud
         id: auth
         uses: google-github-actions/auth@v2
         with:
@@ -39,53 +37,45 @@ jobs:
           echo "Current GCP project config:"
           gcloud config list project
 
-      # Step 5: Sanity Checks
-      - name: 🧪 Sanity Checks (Environment)
-        run: |
-          echo "==> Environment Sanity Check"
-          echo "GitHub SHA: ${{ github.sha }}"
-          echo "GCP Project: ${{ secrets.GCP_PROJECT_ID }}"
-          echo "GCP Region: ${{ secrets.GCP_REGION }}"
-          echo "GKE Cluster: ${{ secrets.GKE_CLUSTER }}"
-          echo "Zone: ${{ secrets.GKE_ZONE }}"
-          echo "Docker Image: $GAR_LOCATION:${{ github.sha }}"
-          echo "✅ If above values are correct and non-empty, sanity check passed."
-
-      # Step 6: Setup gcloud CLI
-      - name: 🛠️ Setup gcloud CLI
+      # Step 5: Setup gcloud CLI
+      - name: Setup gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      # Step 7: 🧩 Install GKE Auth Plugin
+      # Step 6: Install GKE Auth Plugin (FIXED)
       - name: 🧩 Install GKE Auth Plugin
         run: |
-          echo "Installing GKE gcloud auth plugin..."
+          echo "🔧 Installing GKE gcloud auth plugin..."
+          sudo apt-get update -y
+          sudo apt-get install -y apt-transport-https ca-certificates gnupg
+          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | \
+            sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | \
+            sudo gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg
           sudo apt-get update -y
           sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
-          echo "✅ Plugin installation successful!"
+          echo "✅ Plugin installed successfully."
 
-      # Step 8: Configure Docker for Artifact Registry
-      - name: 🐳 Configure Docker
+      # Step 7: Configure Docker
+      - name: Configure Docker
         run: |
-          echo "🔧 Configuring Docker for Artifact Registry..."
+          echo "🔧 Configuring Docker to use Artifact Registry..."
           gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
 
-      # Step 9: Build Docker Image
+      # Step 8: Build Docker Image
       - name: 🏗️ Build Docker Image
         run: |
           echo "🛠️ Building Docker image..."
           docker build -t $GAR_LOCATION:${{ github.sha }} .
-          docker images | grep iris-api || echo "⚠️ Image build verification failed!"
 
-      # Step 10: Push Docker Image
+      # Step 9: Push Docker Image
       - name: 🚀 Push Docker Image
         run: |
           echo "📦 Pushing image to Artifact Registry..."
           docker push $GAR_LOCATION:${{ github.sha }}
-          echo "✅ Image pushed successfully to $GAR_LOCATION"
 
-      # Step 11: Get GKE Credentials
+      # Step 10: Connect to GKE
       - name: 🔑 Get GKE Credentials
         run: |
           echo "🔗 Fetching GKE credentials..."
@@ -93,27 +83,26 @@ jobs:
             --zone ${{ secrets.GKE_ZONE }} \
             --project ${{ secrets.GCP_PROJECT_ID }}
 
-      # Step 12: Verify GKE Connectivity
-      - name: 🧠 Verify GKE Connectivity
+      # Step 11: Sanity Check (GKE)
+      - name: 🧪 Sanity Check (GKE Connectivity)
         run: |
-          echo "🔍 Verifying cluster access..."
-          kubectl cluster-info || (echo "❌ Failed to connect to GKE" && exit 1)
-          kubectl get nodes || (echo "⚠️ Unable to list nodes" && exit 1)
-          echo "✅ Cluster connectivity check passed."
+          echo "🔍 Verifying connection to GKE..."
+          kubectl cluster-info
+          kubectl get nodes
+          echo "✅ Cluster connection successful."
 
-      # Step 13: Deploy to GKE
+      # Step 12: Deploy to GKE
       - name: 🌐 Deploy to GKE
         run: |
-          echo "🚀 Updating deployment image in GKE..."
+          echo "🚀 Updating deployment image..."
           kubectl set image deployment/iris-api iris-api=$GAR_LOCATION:${{ github.sha }} --namespace=default
           echo "🕒 Waiting for rollout to complete..."
           kubectl rollout status deployment/iris-api --namespace=default
-          echo "✅ Deployment rollout successful."
 
-      # Step 14: Post-deploy verification
+      # Step 13: Post-deploy verification
       - name: ✅ Verify Deployment
         run: |
           echo "🔍 Checking running pods and services..."
           kubectl get pods --namespace=default
           kubectl get svc --namespace=default
-          echo "🎉 Deployment successful and services verified!"
+          echo "🎉 Deployment successful!"
