--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,11 +2,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: iris-api
+  labels:
+    app: iris-api
 spec:
-  replicas: 1   # Start with one pod (HPA will scale up to 3)
+  replicas: 1
   selector:
     matchLabels:
       app: iris-api
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
@@ -18,11 +25,19 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 5000
+          # ✅ Resource limits (lightweight to avoid "Insufficient CPU")
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
+            limits:
+              cpu: 200m
+              memory: 256Mi
 
-          # ✅ Probes updated to use /predict
+          # ✅ Health probes (adjust if your endpoint differs)
           readinessProbe:
             httpGet:
-              path: /health
+              path: /predict
               port: 5000
             initialDelaySeconds: 10
             periodSeconds: 10
@@ -31,32 +46,13 @@ spec:
 
           livenessProbe:
             httpGet:
-              path: /health
+              path: /predict
               port: 5000
-            initialDelaySeconds: 20
+            initialDelaySeconds: 30
             periodSeconds: 20
-            timeoutSeconds: 3
+            timeoutSeconds: 5
             failureThreshold: 3
 
-          # ✅ Resource requests/limits help prevent “Insufficient CPU” errors
-          resources:
-            requests:
-              cpu: "250m"
-              memory: "256Mi"
-            limits:
-              cpu: "500m"
-              memory: "512Mi"
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: iris-api
-spec:
-  type: LoadBalancer
-  selector:
-    app: iris-api
-  ports:
-    - protocol: TCP
-      port: 5000
-      targetPort: 5000
+          env:
+            - name: PORT
+              value: "5000"
