--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-flask
-numpy
+flask==2.3.4
+numpy==1.26.1
 scikit-learn==1.7.2
-joblib
-mlflow
-gunicorn
+joblib==1.3.2
+mlflow==2.7.0
+gunicorn==22.1.1
