--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,14 +54,6 @@ jobs:
           kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
           kubectl wait --for=condition=available --timeout=120s deployment/metrics-server -n kube-system
 
-      - name: Check external IP
-        run: |
-          EXTERNAL_IP=$(kubectl get svc iris-api -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-          if [ -z "$EXTERNAL_IP" ]; then
-            echo "Service not ready. Exiting..."
-            exit 1
-          fi
-
       - name: Run poisoned training (MLFlow)
         run: |
           export MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}
@@ -103,6 +95,24 @@ jobs:
                     averageUtilization: 70
           EOF
           kubectl apply -f hpa.yaml
+
+      - name: Wait for external IP
+        run: |
+          for i in {1..30}; do
+            EXTERNAL_IP=$(kubectl get svc iris-api -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+            if [ -n "$EXTERNAL_IP" ]; then
+              echo "Service ready at $EXTERNAL_IP"
+              break
+            fi
+            echo "Waiting for service external IP..."
+            sleep 10
+          done
+          if [ -z "$EXTERNAL_IP" ]; then
+            echo "ERROR: Service did not get an external IP"
+            exit 1
+          fi
+          echo "🌐 Testing endpoint: http://$EXTERNAL_IP/predict"
+          wrk -t8 -c1500 -d60s -s post.lua http://$EXTERNAL_IP/predict
 
       - name: Install wrk & run stress test
         run: |
