--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: iris-api
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: iris-api
@@ -25,25 +25,21 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 5000
-          # ✅ Resource limits (lightweight to avoid "Insufficient CPU")
           resources:
             requests:
-              cpu: 100m
-              memory: 128Mi
+              cpu: "500m"
+              memory: "256Mi"
             limits:
-              cpu: 200m
-              memory: 256Mi
-
-          # ✅ Health probes (adjust if your endpoint differs)
+              cpu: "1"
+              memory: "512Mi"
           readinessProbe:
             httpGet:
               path: /predict
               port: 5000
-            initialDelaySeconds: 10
+            initialDelaySeconds: 20
             periodSeconds: 10
-            timeoutSeconds: 3
+            timeoutSeconds: 5
             failureThreshold: 5
-
           livenessProbe:
             httpGet:
               path: /predict
@@ -52,7 +48,8 @@ spec:
             periodSeconds: 20
             timeoutSeconds: 5
             failureThreshold: 3
-
           env:
             - name: PORT
               value: "5000"
+            - name: MLFLOW_TRACKING_URI
+              value: "http://<your-mlflow-tracking-server>"
